feat: se añadió la funcionalidad para gestionar tipos de identificación y se refactorizó la creación de usuarios en Cognito
Se corrigió la logica de autenticación, tenia un problema con la integración con cognito

Signed-off-by: Santiago Zapata Barahona <santiago.zapatab@udea.edu.co>